admin-service/src/main/java/com/example/adminservice/infra/error/ErrorCode.java
package com.example.adminservice.infra.error;

import org.springframework.http.HttpStatus;

public interface ErrorCode {
    HttpStatus getHttpStatus();
    String getDetail();
}
